# astro-rust

./: Cargo.toml
src/: aberr.rs  atmos.rs  binary_star.rs  coords.rs  ecliptic.rs  lunar.rs  nutation.rs  parallax.rs  pluto.rs  precess.rs  sun.rs  time.rs  transit.rs
src/orbit/: elliptic.rs  near_parabolic.rs  parabolic.rs
src/planet/: earth.rs  mars.rs  mod.rs
src/planet/jupiter/: mod.rs  moon.rs
src/planet/saturn/: mod.rs  moon.rs  ring.rs
tests/: elliptic.rs  parabolic.rs  planet.rs  time.rs
